@@ -1,5 +1,7 @@
 DIST singularity-1.0.0.tar.gz 34576 SHA256 7476a6e27db7c14a0307af38c437d95cffb042b276a31ce6d37382b774b03b38 SHA512 982842bae0346957fce78b0eafee78e4d551ffc4b186a77f7531cc82d416c44a516df103ee82a98ae421f01a11053054a698651a6e3a714ec7235d5154fafce1 WHIRLPOOL 15b7586df4ca258dedf3d53419a2fecf97ce6d5b70e0c06ee44b01516ce002dc2019181d7e0e5f99590f64faf63380f002e8144508f3e140d21ed65a6776e10c
+DIST singularity-1.0.1.tar.gz 34562 SHA256 b98c747549dbe283941f82d997530dd0c5a670d36c62cc727298627afb783b3b SHA512 08ccb80f4aeab8a37ea3dcfb8fb0bfc9aa8c3a32613d9e88a04ba400d1f068327e55cece202fbc7a27d95a1ec4fe1c955eb13d1dc02bad0eaec84d8604469aa5 WHIRLPOOL 12a2628d1d6ff10bd141dcf544039ea7ab34c64a5e8c6b2281208a1523907e5092a346bd270d5b4eb67044f7244afdd32b9d1315a033412b168a4b80705af50e
 EBUILD singularity-1.0.0.ebuild 1065 SHA256 1b070b27c7a214942e10f806d9b939c41104d5650b80d5c3d5cd18050f766b8a SHA512 b8ccc0e15df4131dc80f47215908574cf04361ea4fa751437655cc4113884ea80ab8bd43b2565a82a68f65ebaaa100218b00fd45c70a3f75336f7b940125bc8c WHIRLPOOL b1861f94afdb6ead2a6a343d3bbba014e4531a2aebd413be1bc4d76ddd596cd5f1c5d673576633f7a3de613b90255ebaf9528c146e6f81bf6e5d120a11a24838
-EBUILD singularity-9999.ebuild 1049 SHA256 a31e189284d9492f8fac73b5aca867c22e0017ebb0043964b09db50bbe38a2f8 SHA512 52366829ac2982ae492316aba4711641fa40e822f347a86fe5a629ec50d2c687a88562b3d0b755d3b679644b46bb3b891a079512235a582be8204463da14bd27 WHIRLPOOL 6f4ad0ccba099024f9fd8a13d9df275bff7cd93f87cadbc24852b971f7ba2b1527a54fb417219d69721b1c6f9af89bf74700f9d5c4d2f728b1d0951dca6d9a33
-MISC ChangeLog 345 SHA256 31be5a5139e4674a11745972f24fad8cfef6063279952fb90a37174251c2472a SHA512 881f34b6f53910a9f07b4540d98a11d79d9ede3a0a4819a94ec86ebb6c7a68b9970e27e7f573f94558268bb9e4369e03f6f7381492700444ef85e40a6d5365c1 WHIRLPOOL a07fc17fb4352fca70d1dedb398711a9e5de1dc2d0c3da852ed2521eb267511228bad4e51871e3eb7d850856c7b43e0a707eabac5a2b06755287ecf5d04d5987
+EBUILD singularity-1.0.1.ebuild 973 SHA256 95a0708977955e39466b9d299a146e3cf5696471f8195ca3b5d0eb3ff7bcbcce SHA512 2db49b462c07ae04dfa8433ed058c7274c68f25b721c7178bda2b50921f169a1d0285f6d1d8761f7093aa2adf2cd6e69055af324525d87fff496ff9b127b7cc3 WHIRLPOOL eb47dd013b02a1bfe0d020e39058c6097a5ee4f3d28abbda5d9ede1f3547c31b2009641adcd232bbd5cf4f70974dd3e25dcf4d1dca671d435f30311279a9f4e6
+EBUILD singularity-9999.ebuild 957 SHA256 7a2f51242cd4ed394c84285231247f78a76ff7a7838df238c27dfbffdc282490 SHA512 8a4220ee66c2465fb4390fd86c5d490ba433b7552f84f120125e57cb563fd8371f973b554c48fffe761f8fe9e8d9b3ef25e1a77debaa7ba81649fbb269967ca4 WHIRLPOOL 9b1173ac65a3cfade24e89f9bbf9935c4ff654cec0795bd07c700f04f2be7ae5e97ebf535d15a043e859d716d56789b51af3238cd1aeecb400ea7cc37f392deb
+MISC ChangeLog 519 SHA256 88bfcc423f55fea0d34ecde2ea47811aab4687cc1237fbbda4b265cb1625019f SHA512 0a0268255c519ec2117530841e0ee68c6fa1d7337c6557aa0116c94b2bf339c2dbfa96f9fc32b5e1fd0cfb7b22fec4a700a69519d2fb082724a089452c63ec70 WHIRLPOOL 4445732dffca6895679a6cb15da5e34ffec13aa667f5373935d6dd1845e49a85cc253a692db3b4afe22f293331d37530a4da6267ad53176cc8803fb34a5306df
 MISC metadata.xml 276 SHA256 ae9971b04634c8fc986df8ddd298bcf24b4d278d9f8cc5677a0848053722c7c1 SHA512 0cdb59ec227c18afb6b9c43e1ea2214cae49c604b96a01ed80875cfe550a87b4c59e2bfa9dc5e1d3b097c4c22d1b951caee3eff48a8a481ac3a93832e4ec3f3f WHIRLPOOL 5a22c060e9723aaf23ed3dc266925812b45971edf1526a3a50d60cd4f3cae99a887eb1bddfc7b8c06e8d0d98acf9a944e37ac7c2bfe26d146f73718c1437c13f
