@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*singularity-1.0.1 (29 Sep 2012)
+
+  29 Sep 2012; <alunduil@gentoo.org> +singularity-1.0.1.ebuild,
+  singularity-9999.ebuild:
+  version bump, removing useless die statements
+
   13 Sep 2012; <alunduil@gentoo.org> singularity-9999.ebuild:
   Removing useless src_prepare from 9999.
 
